fix(cart): auto-remove already-purchased courses from cart on getCart()